<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="mainTitle">BMI Calculator</string>
    <string name="startButtonText">start</string>
    <string name="quitButton">quit</string>
    <string name="fullName">Full Name:</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="maleText">Male</string>
    <string name="femaleText">Female</string>
    <string name="weight">Weight:</string>
    <string name="bodyType">Body-Type:</string>
    <string-array name="body_type">
        <item name="small">Small</item>
        <item name="medium">Medium</item>
        <item name="large">Large</item>
    </string-array>
    <string name="height">Height:</string>
    <string name="calculateButtonText">calculate</string>
    <string name="errorMessage">Enter all the required fields to continue.</string>
    <string name="bmi">Your BMI is:</string>
    <string name="bmiText">BMI</string>
    <string name="status">Your Status is:</string>
    <string name="statusText">Status</string>
    <string name="message"><u>message</u></string>
    <string name="messageText">message</string>
    <string name="bmi_text">%1$,.2f</string>
    <string name="status_text">%1$s </string>
    <string name="message_text"><b>Actual Weight:</b> %1$,.2f </string>
    <string name="message_text2"><b>Ideal Weight:</b> %1$,.2f <b>\n</b></string>
    <string name="message_text3_1">Try to eat more and work out in order to gain some mass. \nGood luck!</string>
    <string name="message_text3_2">Way to go! you are in a good shape. Working out and eating vegetables is always recommended. \nGood luck!</string>
    <string name="message_text3_3">Try to eat less junk food and more vegetables to lose some mass. \nGood luck!</string>
    <string name="homePage">home page</string>
</resources>