<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/bmi"
        style="@style/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/marginTop"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/bmi" />

    <TextView
        android:id="@+id/bmiText"
        style="@style/textResultBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bmi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/bmiText" />

    <TextView
        android:id="@+id/status"
        style="@style/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bmiText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/status" />

    <TextView
        android:id="@+id/statusText"
        style="@style/textResultBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/statusText"
        android:textSize="40sp" />

    <RelativeLayout
        android:id="@+id/border"
        android:layout_width="300dp"
        android:layout_height="330dp"
        android:layout_below="@id/statusText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/border3"
        android:padding="20dp">

        <TextView
            android:id="@+id/messageText"
            style="@style/textResultBMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/messageText"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/messageText2"
            style="@style/textResultBMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/messageText"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/messageText"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/messageText3"
            style="@style/textResultBMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/messageText2"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/messageText"
            android:textSize="20sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/mainPageButt"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/border"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:text="@string/homePage" />

</RelativeLayout>