<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/infoActivityBackground"
    android:padding="10dp"
    tools:context=".InfoActivity">

    <RelativeLayout
        android:id="@+id/border1"
        style="@style/border"
        android:layout_width="@dimen/infoBorderWidth"
        android:layout_height="@dimen/infoBorderHeight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/border1_marginTop"
        android:paddingBottom="@dimen/smallMargin">

        <TextView
            android:id="@+id/fullName"
            style="@style/TextView"
            android:layout_width="@dimen/textBorderWidth"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_marginStart"
            android:layout_marginTop="@dimen/text_marginTop"
            android:text="@string/fullName" />

        <EditText
            android:id="@+id/fullNameText"
            style="@style/border2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="125dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:importantForAutofill="no"
            android:inputType="textAutoComplete"
            tools:ignore="LabelFor" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/border2"
        style="@style/border"
        android:layout_width="@dimen/infoBorderWidth"
        android:layout_height="@dimen/genderBorderHeight"
        android:layout_below="@id/border1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/border_marginTop">

        <TextView
            android:id="@+id/gender"
            style="@style/TextView"
            android:layout_width="@dimen/textBorderWidth"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_marginStart"
            android:layout_marginTop="@dimen/genderText_marginTop"
            android:text="@string/gender" />

        <RadioGroup
            android:id="@+id/genderGroup"
            style="@style/border"
            android:layout_width="260sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="110sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            android:orientation="horizontal"
            android:padding="15sp">

            <RadioButton
                android:id="@+id/maleButton"
                style="@style/border2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/maleText"
                android:textAlignment="viewStart"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/femaleButton"
                style="@style/border2"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/femaleText"
                android:textAlignment="viewStart"
                android:textStyle="bold" />
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/border3"
        style="@style/border"
        android:layout_width="@dimen/infoBorderWidth"
        android:layout_height="@dimen/infoBorderHeight"
        android:layout_below="@id/border2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/border_marginTop"
        android:paddingBottom="@dimen/smallMargin">

        <TextView
            android:id="@+id/age"
            style="@style/TextView"
            android:layout_width="@dimen/textBorderWidth"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_marginStart"
            android:layout_marginTop="@dimen/text_marginTop"
            android:text="@string/age" />

        <EditText
            android:id="@+id/ageText"
            style="@style/border2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="125dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="LabelFor" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/border4"
        style="@style/border"
        android:layout_width="@dimen/infoBorderWidth"
        android:layout_height="@dimen/infoBorderHeight"
        android:layout_below="@id/border3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/border_marginTop"
        android:paddingBottom="@dimen/smallMargin">

        <TextView
            android:id="@+id/WeightView"
            style="@style/TextView"
            android:layout_width="@dimen/textBorderWidth"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_marginStart"
            android:layout_marginTop="@dimen/text_marginTop"
            android:text="@string/weight" />

        <EditText
            android:id="@+id/weightText"
            style="@style/border2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="125dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            tools:ignore="LabelFor" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/border5"
        style="@style/border"
        android:layout_width="@dimen/infoBorderWidth"
        android:layout_height="@dimen/infoBorderHeight"
        android:layout_below="@id/border4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/border_marginTop"
        android:paddingBottom="@dimen/smallMargin">

        <TextView
            android:id="@+id/bodyType"
            style="@style/TextView"
            android:layout_width="@dimen/textBorderWidth"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_marginStart"
            android:layout_marginTop="@dimen/text_marginTop"
            android:text="@string/bodyType" />

        <Spinner
            android:id="@+id/bodyTypeSpinner"
            style="@android:style/Widget.Spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="133dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/border6"
        style="@style/border"
        android:layout_width="@dimen/infoBorderWidth"
        android:layout_height="110dp"
        android:layout_below="@id/border5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/border_marginTop"
        android:paddingBottom="@dimen/smallMargin">

        <TextView
            android:id="@+id/height"
            style="@style/TextView"
            android:layout_width="@dimen/textBorderWidth"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/marginSmaller"
            android:text="@string/height" />

        <com.google.android.material.slider.Slider
            android:id="@+id/heightSlider"
            android:layout_width="@dimen/sliderWeight"
            android:layout_height="wrap_content"
            android:layout_below="@id/height"
            android:layout_centerHorizontal="true"
            android:stepSize="@dimen/step"
            android:value="@dimen/ValueFrom"
            android:valueFrom="@dimen/ValueFrom"
            android:valueTo="@dimen/ValueTo"
            app:thumbColor="@color/white"
            app:trackColor="#C79CFB" />
    </RelativeLayout>

    <Button
        android:id="@+id/calculate"
        style="@style/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_below="@id/border6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/calculateButtonText" />

</RelativeLayout>